@@ -1,3 +1,10 @@
+2012-01-31  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* libtiff/tif_dir.c, libtiff/tif_dirread.c: Extra caution around
+	assumption tag fetching is always successful. 
+
+	* libtiff/tif_jpeg.c: Extra caution for case where sp is NULL.
+
 2012-01-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* configure.ac: Add support for using library symbol versioning on
